# Cryptopals-challenges

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  Q11.py  Q12.py  Q13.py  Q14.py  Q15.py  Q16.py  Q17.py  Q18.py  Q21.py  Q22.py  Q23.py  Q24.py  Q25.py  Q26.py  Q27.py  Q28.py  Q31.py  Q32.py  Q33.py  Q34.py  Q35.py  Q36.py  Q37.py  Q38.py  Q41.py  Q42.py  Q43.py  Q44.py  Q45.py  Q46.py  Q46MD5.py  Q47Server.py  Q47Utils.py  Q47attacker.py  Q48Server.py  (+42 more)
docs/: challenges.md  index.md  legacy_writeup.md
scripts/: challenge_map.json  run_challenge.py  verify_project.py
src/: __init__.py
src/sets/: __init__.py
src/sets/set_01_basics/: __init__.py
src/sets/set_01_basics/challenge_01_hex_to_base64/: __init__.py  hex_to_base64.py  writeup.md
src/sets/set_01_basics/challenge_02_fixed_xor/: __init__.py  fixed_xor.py  writeup.md
src/sets/set_01_basics/challenge_03_single_byte_xor_cipher/: __init__.py  single_byte_xor_cipher.py  writeup.md
src/sets/set_01_basics/challenge_04_detect_single_character_xor/: __init__.py  detect_single_character_xor.py  writeup.md
src/sets/set_01_basics/challenge_05_repeating_key_xor/: __init__.py  repeating_key_xor.py  writeup.md
src/sets/set_02_block_crypto/: __init__.py
src/sets/set_03_block_and_stream_crypto/: __init__.py
src/sets/set_04_stream_crypto_and_randomness/: __init__.py
src/sets/set_05_diffie_hellman_and_friends/: __init__.py
src/sets/set_06_rsa_and_dsa/: __init__.py
src/sets/set_07_hashes/: __init__.py
src/sets/set_08_abstract_algebra/: __init__.py
(+188 files in other folders)
