[project]
name = "cryptopals-challenges"
version = "0.1.0"
description = "Refactored and organized solutions for the Cryptopals crypto challenges."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "danie" }]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
